# autoconf-sample

achello/: README.FOR-USE.md  README.md  configure.ac
amhello/: Makefile.am  README.FOR-USE.md  configure.ac  configure.scan
amhello/src/: Makefile  hello  main.c
amhello/utils/: README.md
generating-sources/: README.md  configure.ac
