#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.69])
AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
AC_CONFIG_AUX_DIR(utils)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES(
 Makefile
 src/Makefile
)
AC_OUTPUT
